aux_source_directory (. SRC_LIST)

add_executable (sgw ${SRC_LIST})
add_compile_options(-g -Wall -Wextra -Wno-unused-function -Wno-unused-parameter -fPIC)
target_link_libraries(sgw pthread crypto)
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

option(MD5 "enable check md5" off)
if(MD5)
    message("check md5 on")
    set(HAVE_CHECK_MD5 1)
else()
    message("check md5 off")
endif()
configure_file(${PROJECT_SOURCE_DIR}/src/config.h.in ${PROJECT_SOURCE_DIR}/src/config.h @ONLY)
